fix: Sonar issues [DHIS2-12309]